fix: 修复坏味道和潜在bug